@@ -112,13 +112,21 @@
    :: When we have int *x; in global scode, then is generated MAP_GB_VAR_FORTES();, but no has that function cuz
       the pointer mapped only in the first assignment
    SOLVED: Added the code "if 0 in self.map_is_global2map and 0 in self.map_id_func2map:" at line 1046
-
-
 > [THE PROJECT] Fixed bug related to:
     :: memory-alloca/selectionsort_unsafe_false-valid-deref.c
         - SOLVED - map2check removed lines about added permission to DIR
     :: memory-alloca/openbsd_cstpcpy-alloca_true-valid-memsafety.c
         - SOLVED - create_map.py added "if not flowProgramCond.block_items is None:" at 1325
+
+
+
+
+
+
+> [FILE:svcop_simulation.py] Updated the classification by failed and unsafe
+
+
+
 
 
 
